# edgehog-device-runtime

./: .dockerignore  .gitignore  .gitmodules  1q  CHANGELOG.md  Cargo.lock.license  Cargo.toml  README.md  REUSE.toml  SECURITY.md  Taskfile.yaml  _typos.toml  build.rs  codecov.yml  committed.toml  justfile  pyproject.toml  release-plz.toml  rust-toolchain.toml  uv.lock.license
cellular-modems-service/: Cargo.toml  README.md
cellular-modems-service/scripts/: get.sh  insert.sh  list.sh
cellular-modems-service/src/: main.rs
cellular-properties-service/: Cargo.toml  README.md
cellular-properties-service/src/: main.rs
e2e-test/: Cargo.toml
e2e-test-containers/: Cargo.toml  README.md
e2e-test-containers/assets/: data.json  delete.json  isolate-no-net.json  isolate-no-net.json.license  private-registry.json  rollback.json  stop.json  unset-missing.json  update.json
e2e-test-containers/scripts/: entrypoint.sh  export-env.sh
e2e-test-containers/src/: cli.rs  main.rs  receive.rs  send.rs
e2e-test-docker/: Cargo.toml
e2e-test-docker/assets/: data.json
e2e-test-docker/src/: cli.rs  main.rs  receive.rs  send.rs  simulate.rs
e2e-test-forwarder/: Cargo.toml
e2e-test-forwarder/src/: main.rs
e2e-test/src/: main.rs
edgehog-device-forwarder-proto/: Cargo.toml  README.md
edgehog-device-forwarder-proto/src/: lib.rs  proto.rs
edgehog-device-runtime-containers/: CHANGELOG.md  Cargo.toml  README.md
edgehog-device-runtime-containers/src/: client.rs  error.rs  events.rs  lib.rs  local.rs  mock.rs  tracing.rs
edgehog-device-runtime-containers/src/docker/: container.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-containers/src/events/: deployment.rs  mod.rs
edgehog-device-runtime-containers/src/properties/: container.rs  deployment.rs  device_mapping.rs  device_request.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-containers/src/requests/: container.rs  deployment.rs  device_mapping.rs  device_request.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-containers/src/resource/: container.rs  deployment.rs  device_mapping.rs  device_request.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-containers/src/service/: collection.rs  events.rs  mod.rs  node.rs  resource.rs  state.rs
edgehog-device-runtime-containers/src/stats/: blkio.rs  cpu.rs  memory.rs  mod.rs  network.rs  procs.rs  volume.rs
edgehog-device-runtime-containers/src/store/: container.rs  deployment.rs  device_mapping.rs  device_request.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-containers/src/store/container/: create.rs  mod.rs
edgehog-device-runtime-docker/: Cargo.lock.license  Cargo.toml  README.md
edgehog-device-runtime-docker/src/: client.rs  docker.rs  error.rs  image.rs  lib.rs  mock.rs  network.rs  properties.rs  request.rs  service.rs  volume.rs
edgehog-device-runtime-docker/src/docker/: container.rs  image.rs  mod.rs  network.rs  volume.rs
edgehog-device-runtime-docker/src/properties/: container.rs  image.rs  mod.rs  network.rs  release.rs  volume.rs
edgehog-device-runtime-docker/src/requests/: mod.rs
edgehog-device-runtime-docker/src/service/: mod.rs  node.rs  nodes.rs
edgehog-device-runtime-docker/src/store/: mod.rs
edgehog-device-runtime-forwarder/: CHANGELOG.md  Cargo.toml  README.md
edgehog-device-runtime-forwarder/src/: astarte.rs  collection.rs  connection.rs  connections_manager.rs  lib.rs  messages.rs  test_utils.rs  tls.rs
edgehog-device-runtime-forwarder/src/connection/: http.rs  mod.rs  websocket.rs
edgehog-device-runtime-forwarder/tests/: http_test.rs  ws_test.rs
edgehog-device-runtime-service/: CHANGELOG.md  Cargo.toml  README.md
edgehog-device-runtime-service/src/: config.rs  lib.rs
edgehog-device-runtime-service/src/service/: mod.rs
edgehog-device-runtime-service/src/service/containers/: mod.rs  v1.rs
edgehog-device-runtime-store/: CHANGELOG.md  Cargo.toml  README.md  build.rs  diesel.toml
edgehog-device-runtime-store/assets/: init-reader.sql  init-writer.sql  schema.patch
edgehog-device-runtime-store/migrations/2024-11-29-163409_initial/: down.sql  up.sql
edgehog-device-runtime-store/migrations/2025-08-13-141429_containers-additional-fields/: down.sql  up.sql
edgehog-device-runtime-store/migrations/2026-02-26-130250-0000_device-request/: down.sql  up.sql
edgehog-device-runtime-store/migrations/2026-03-27-150629-0000_not-null-primary/: up.sql
edgehog-device-runtime-store/migrations/2026-05-20-110730-0000_order-deployment-containers/: down.sql
edgehog-device-runtime-store/migrations/containers/2024-11-29-163409_initial/: down.sql  up.sql
edgehog-device-runtime-store/scripts/: create-db.sh  run-migrations.sh
edgehog-device-runtime-store/snapshots/: edgehog_device_runtime_store__models__job__job_type__tests__job_type_roundtrip_0.snap  edgehog_device_runtime_store__models__job__job_type__tests__job_type_roundtrip_1.snap  edgehog_device_runtime_store__models__job__status__tests__3.snap  edgehog_device_runtime_store__models__job__status__tests__job_status_roundtrip_0.snap  edgehog_device_runtime_store__models__job__status__tests__job_status_roundtrip_1.snap  edgehog_device_runtime_store__models__job__status__tests__job_status_roundtrip_2.snap  edgehog_device_runtime_store__tests__use_macro.snap
edgehog-device-runtime-store/src/: conversions.rs  db.rs  lib.rs
edgehog-device-runtime-store/src/models/: mod.rs
edgehog-device-runtime-store/src/models/containers/: container.rs  image.rs  (+6 more)
edgehog-device-runtime-store/src/schema/: containers.rs  mod.rs  runtime.rs  runtime.rs.license
edgehogctl/: CHANGELOG.md  Cargo.toml  README.md
edgehogctl/src/: client.rs  jobs.rs  main.rs
edgehogctl/src/file_transfer/: mod.rs
hardware-id-service/: Cargo.toml  README.md  io.edgehog.Device.conf
hardware-id-service/scripts/: get-hardware-id.sh
hardware-id-service/src/: main.rs
led-manager-service/: Cargo.lock.license  Cargo.toml  README.md
led-manager-service/scripts/: insert.sh  list.sh  set.sh
led-manager-service/src/: main.rs
(+232 files in other folders)
