# This file is part of Edgehog.
#
# Copyright 2022-2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[workspace]
resolver = "3"
members = [
  "cellular-modems-service",
  "e2e-test",
  "e2e-test-containers",
  "e2e-test-forwarder",
  "edgehog-device-runtime-containers",
  "edgehog-device-runtime-forwarder",
  "edgehog-device-runtime-service",
  "edgehog-device-runtime-store",
  "edgehog-device-runtime-tls",
  "edgehogctl",
  "hardware-id-service",
  "led-manager-service",
]

[workspace.package]
version = "0.10.5"
edition = "2024"
homepage = "https://github.com/edgehog-device-manager/edgehog-device-runtime"
license = "Apache-2.0"
rust-version = "1.88"
description = "Edgehog Device Runtime is a portable middleware, that enables remote device management on Linux-based systems."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-optimised]
inherits = "release"
strip = true
# Similar to fat in term of performances, but takes substantially less time to run
lto = "thin"
debug = true
# Supported by all platform
split-debuginfo = "packed"

[package]
name = "edgehog-device-runtime"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
default = [
  "file-transfer",
  "platform-verifier",
  "udev",
  "wifiscanner",
  "zbus",
]
# Enable the container management service
containers = [
  "dep:edgehog-containers",
  "edgehog-service?/containers",
]
# Enable the file transfer feature
file-transfer = []
# Enable the forwarder service
forwarder = ["dep:edgehog-forwarder"]
# Enable connecting to astarte through the Message Hub
message-hub = ["astarte-device-sdk/message-hub"]
# Local service for the runtime
service = ["dep:edgehog-service"]
# Notifies systemd of the status and health of the runtime service
systemd = ["dep:systemd"]
# Enable the telemetry that uses udev
udev = ["dep:udev"]
# Enable the wifi scanning telemetry
wifiscanner = ["dep:wifiscanner"]
# Enable the communication with DBUS
zbus = ["dep:zbus"]
# Preferred, use the platform certificate and TLS verifier.
platform-verifier = ["edgehog-tls/platform-verifier"]
# Uses the webpki-roots as a CA bundles
webpki-roots = [
  "edgehog-tls/webpki-roots",
  "astarte-device-sdk/webpki",
]
# Required for libsqlite3 on ubuntu 24.04 seg faulting with multi join queries
# See: https://bugs.launchpad.net/ubuntu/+source/sqlite3/+bug/2087772
# Uses and compiles the vendored version of the C dependencies
vendored = [
  "astarte-device-sdk/vendored",
  "edgehog-store/vendored",
]
# Recreates the C bindings at buildtime, requires cmake, clang, and  bindgen-cli
bindgen = [
  "astarte-device-sdk/bindgen",
  "edgehog-store/bindgen",
]
# Feature to make it easier to cross compile the runtime, it requires clang and cmake to be
# installed
cross = ["vendored", "bindgen"]

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
async-compression = { workspace = true, features = ["tokio", "gzip"] }
async-tar = { workspace = true, default-features = false, features = ["runtime-tokio", "xattr"] }
aws-lc-rs.workspace = true
bytes.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
diesel.workspace = true
dirs.workspace = true
displaydoc.workspace = true
edgehog-containers = { workspace = true, optional = true }
edgehog-forwarder = { workspace = true, optional = true }
edgehog-service = { workspace = true, optional = true }
edgehog-store.workspace = true
edgehog-tls.workspace = true
eyre.workspace = true
futures.workspace = true
hex.workspace = true
minicbor = { workspace = true, features = ["std", "derive"] }
pin-project.workspace = true
rustix = { workspace = true, features = ["fs"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
uuid = { workspace = true, features = ["v5", "v4", "serde"] }
walkdir.workspace = true
wifiscanner = { workspace = true, optional = true }
zbus = { workspace = true, optional = true, default-features = false, features = ["tokio"] }

[dependencies.reqwest]
workspace = true
default-features = false
features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-no-provider",
  "stream",
]

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
udev = { workspace = true, optional = true }
systemd = { workspace = true, optional = true }

[build-dependencies]
rustc_version.workspace = true

[dev-dependencies]
astarte-device-sdk-mock.workspace = true
httpmock.workspace = true
insta.workspace = true
mockall.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempdir.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tokio-stream = { workspace = true, features = ["net"] }

[workspace.dependencies]
astarte-device-sdk = "0.13.0"
astarte-device-sdk-mock = "0.13.0"
async-compression = "0.4.41"
async-tar = { version = "0.6.0", default-features = false }
async-trait = "0.1.89"
aws-lc-rs = "1.16.2"
backoff = "0.4.0"
base64 = "0.22.1"
bollard = "0.20.0"
bytes = "1.10.1"
cfg-if = "1.0.3"
clap = "4.5.60"
color-eyre = "0.6.5"
deadpool = { version = "0.13.0", default-features = false }
diesel = "2.3.7"
diesel_migrations = "2.3.1"
dirs = "6.0.0"
displaydoc = "0.2.5"
edgehog-containers = { package = "edgehog-device-runtime-containers", path = "./edgehog-device-runtime-containers", version = "=0.10.5" }
edgehog-device-forwarder-proto = "0.1.0"
edgehog-forwarder = { package = "edgehog-device-runtime-forwarder", path = "./edgehog-device-runtime-forwarder", version = "=0.10.5" }
edgehog-proto = { package = "edgehog-device-runtime-proto", version = "0.10.0" }
edgehog-service = { package = "edgehog-device-runtime-service", path = "./edgehog-device-runtime-service", version = "=0.10.5" }
edgehog-store = { package = "edgehog-device-runtime-store", path = "./edgehog-device-runtime-store", version = "=0.10.5" }
edgehog-tls = { package = "edgehog-device-runtime-tls", path = "./edgehog-device-runtime-tls", version = "=0.10.5" }
eyre = "0.6.12"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
httpmock = "0.8.2"
hyper = "1.7.0"
indexmap = "2.14.0"
insta = "1.47.2"
itertools = "0.14.0"
minicbor = "2.2.1"
mockall = "0.14.0"
pin-project = "1.1.11"
pretty_assertions = "1.4.1"
procfs = "0.18.0"
reqwest = { version = "0.13.1", default-features = false }
rstest = "0.26.1"
# Version required by diesel
rusqlite = "0.38.0"
rustc_version = "0.4.1"
rustix = "1.1.4"
rustls = "0.23.37"
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
rustls-platform-verifier = "0.6.2"
serde = "1.0.228"
serde_json = "1.0.145"
sysinfo = "0.38.4"
systemd = "0.10.1"
tempdir = "0.3.7"
tempfile = "3.27.0"
thiserror = "2.0.17"
tokio = "1.51.1"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.16"
toml = "1.1.2"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.20"
udev = "0.9.3"
url = "2.5.7"
uuid = "1.23.0"
walkdir = "2.5.0"
webpki-roots = "1.0.4"
wifiscanner = "0.5.1"
zbus = { version = "5.14.0", default-features = false }
