# This file is part of Edgehog.
#
# Copyright 2023-2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "e2e-test-containers"
version.workspace = true
edition.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
color-eyre.workspace = true
edgehog-containers.workspace = true
edgehog-store.workspace = true
eyre.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "signal"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dependencies.reqwest]
workspace = true
default-features = false
features = [
    "charset",
    "http2",
    "system-proxy",
    "rustls-no-provider",
]
