# This file is part of Edgehog.
#
# Copyright 2023 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "e2e-test-docker"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: make this package part of the workspace when edgehog dependencies are updated
[dependencies]
astarte-device-sdk = { git = "https://github.com/astarte-platform/astarte-device-sdk-rust.git", branch = "master", features = ["derive"] }
color-eyre = "0.6.2"
edgehog-docker = { package = "edgehog-device-runtime-docker", path = "../edgehog-device-runtime-docker" }
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
