# Copyright 2023-2024 SECO Mind Srl
# SPDX-License-Identifier: Apache-2.0

[package]
name = "e2e-test-forwarder"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
publish = false
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
edgehog-forwarder = { workspace = true, features = ["_test-utils"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
