# This file is part of Edgehog.
#
# Copyright 2023, 2026 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-forwarder-proto"
version.workspace = true
categories = ["encoding"]
documentation = "https://docs.rs/edgehog-device-forwarder-proto"
edition.workspace = true
keywords = ["protobuf", "iot", "edgehog"]
license.workspace = true
repository = "https://github.com/edgehog-device-manager/edgehog-device-runtime"
rust-version.workspace = true
description = "Protobuf messages for the Edgehog Device Forwarder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
