# This file is part of Edgehog.
#
# Copyright 2023 - 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-containers"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
base64 = { workspace = true }
bollard = { workspace = true }
cfg-if = { workspace = true }
diesel = { workspace = true }
displaydoc = { workspace = true }
edgehog-store = { workspace = true, features = ["containers"] }
eyre = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true, optional = true }
indexmap = { workspace = true }
itertools = { workspace = true }
mockall = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-util"] }
tracing = { workspace = true, features = ["log"] }
uuid = { workspace = true }

[dev-dependencies]
astarte-device-sdk-mock = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
# Generate random unique names for the containers
uuid = { workspace = true, features = ["v7"] }

[features]
mock = ["dep:mockall", "dep:hyper"]
# Required for libsqlite3 on ubuntu 24.04 seg faulting with multi join queries
# See: https://bugs.launchpad.net/ubuntu/+source/sqlite3/+bug/2087772
vendored = ["edgehog-store/vendored"]
