# This file is part of Edgehog.
#
# Copyright 2023 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-docker"
version = "0.1.0"
# TODO: re-add when astarte-device-sdk is updated in the edgehog-device-runtime
# edition = { workspace = true }
edition = "2021"
# homepage = { workspace = true }
# rust-version = { workspace = true }
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { git = "https://github.com/astarte-platform/astarte-device-sdk-rust.git", branch = "master", features = ["derive"] }
async-trait = "0.1.72"
bollard = "0.15.0"
displaydoc = "0.2.4"
futures = "0.3.28"
hyper = { version = "0.14.27", optional = true }
itertools = "0.11.0"
mockall = { version = "0.11.4", optional = true }
petgraph = "0.6.3"
serde = { version = "1.0.190", features = ["derive"] }
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }

[features]
mock = ["dep:mockall", "dep:hyper"]
