# This file is part of Edgehog.
#
# Copyright 2023-2024 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-docker"
version = "0.1.0"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
bollard = { workspace = true }
displaydoc = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true, optional = true }
itertools = { workspace = true }
mockall = { workspace = true, optional = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-util"] }
tracing = { workspace = true, features = ["log"] }

[features]
mock = ["dep:mockall", "dep:hyper"]
