# Copyright 2023 SECO Mind Srl
# SPDX-License-Identifier: Apache-2.0

[package]
name = "edgehog-device-runtime-forwarder"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astarte-device-sdk = { workspace = true, features = ["derive"] }
async-trait = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
displaydoc = { workspace = true }
edgehog-device-forwarder-proto = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
httpmock = { workspace = true, optional = true }
reqwest = { workspace = true }
rustls = { workspace = true , features = ["ring","logging","std","tls12"]}
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots", "url"] }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }

[features]
_test-utils = ["dep:httpmock", "tokio/test-util"]
